--- a/Code/Part3.html
+++ b/Code/Part3.html
@@ -17,7 +17,7 @@
     <nav>
         <span>
             <a href="Index.html">
-                <img class="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
+                <img class="boutton_acceui" src="images/bizarre-logo.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_2">
@@ -35,8 +35,8 @@
 
     <h1 id="texte_part">Partie 3 - Stardust Crusaders</h1>
 
-    <div id="img_part_cover">
-        <img id="img_aspect" src="https://wallpapers.com/images/hd/stardust-crusaders-1920-x-1080-wallpaper-6v630vfytcoxdn8s.jpg" alt="">
+    <div id="img_part">
+        <img id="img_aspect" src="images/stardust-crusader-cover.jpg" alt="">
     </div>
 
     <h2>
@@ -63,8 +63,8 @@
    </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://vignette3.wikia.nocookie.net/characterprofile/images/c/cb/Jotaro_2014_blue_by_superhedgehogtx-d6r7xvh.png/revision/latest?cb=20160104212032" alt="">
-        <img id="img_aspect" src="https://i.namu.wiki/i/0kggSR3vldNGwx71zBWkQnuiSNn_kdI0HsvAEZA4T5HsNHRC6PJT49aZYQF_hUXs-KJ-PQIm3xKFEX4sUWUGUA.webp" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Jotaro_Kujo.webp" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Jotaro-Star-Platinium.webp" alt="">
     </div>
 
     <h2>
@@ -78,7 +78,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://upload.wikimedia.org/wikipedia/en/d/d2/Dio_Brando.jpg" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Dio-The_World.jpg" alt="">
     </div>
 
     <h2>
@@ -92,9 +92,9 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://preview.redd.it/jwes4tmyyvv31.png?auto=webp&s=f560fe04272090eacbfc3a5552779b55290a4af6" alt="">
-        <img id="img_aspect" src="https://i.pinimg.com/736x/c7/0e/38/c70e381fd346923130ddde6c719ae5d5.jpg" alt="">
-        <img id="img_aspect" src="https://media.tenor.com/Z5NT161IaIAAAAAM/lerolero.gif" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Kakyoin_mort.webp" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-kakyoin-Hierophant_Green.jpg" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-lelolelolelo.gif" alt="">
     </div>
 
 
@@ -105,8 +105,8 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/e/e3/latest/20220310014248/Polnareff_ASB_R.png/400px-Polnareff_ASB_R.png" alt="">
-        <img id="img_aspect" src="https://i.redd.it/polnareffs-pose-from-jojo-bizarre-adventure-stardust-v0-13x00vi3wdpe1.jpg?width=617&format=pjpg&auto=webp&s=336b487f27affc4e9b28ba121cc9ce395944c90a" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Polnareff-Silver_Chariot.png" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Polnareff-pose.jpg" alt="">
     </div>
 
     <p>
@@ -117,7 +117,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/f/fd/latest/20220310013919/Avdol_ASB_R.png/400px-Avdol_ASB_R.png" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Avdol-Magician's_Red.png" alt="">
     </div>
 
     <p>
@@ -128,8 +128,8 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://i.redd.it/stand-off-who-would-win-this-fight-v0-6j6ijd8r4spd1.jpg?width=560&format=pjpg&auto=webp&s=cb3f9c3946a0675dd239a2ca29db3b5c5e045bd6" alt="">
-        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/5/5d/latest/20191015220125/Iggy%27s_death.png/400px-Iggy%27s_death.png" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Iggy-The_Fool.jpg" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Iggy-mort.png" alt="">
     </div>
 
     <p>
@@ -138,7 +138,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://images.shoutwiki.com/jojoss/e/ea/Unit_Joseph_Joestar_%28Anime_Ver.%29_%28R%29.png" alt="">
+        <img id="img_aspect" src="images/stardust-crusader-Joseph-Hermit_Purple.png" alt="">
     </div>
     <br>
 
