--- a/Code/Part5.html
+++ b/Code/Part5.html
@@ -13,7 +13,7 @@
     <nav>
         <span>
             <a href="Index.html">
-                <img class="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
+                <img class="boutton_acceui" src="images/bizarre-logo.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_2">
@@ -35,6 +35,13 @@
         <img id="img_aspect" src="https://wallpaper.forfun.com/fetch/9d/9d394e981ea9baca35b0cb44484ea6f5.jpeg" alt="">
     </div>
 
+    <h2>
+        Explication de la partie
+    </h2>
+
+    <p> 
+        Dans cette partie nous suivons Giorno Giovana, fils de Dio (Dio qui avait le coprs de Jonathan) qui a pour but de devenir chef du gang Passione et de récuperer la Flèche Requiem.
+    </p>
 
 
 
