--- a/Code/arbre-genealogique.html
+++ b/Code/arbre-genealogique.html
@@ -13,7 +13,7 @@
      <nav>
         <span>
             <a href="Index.html">
-                <img class="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
+                <img class="boutton_acceui" src="images/bizarre-logo.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_2">
@@ -33,7 +33,7 @@
     <h1>Arbre Généalogique des Joestars</h1>
     
     <Article id="img_part">
-       <img id="img_aspect" src="https://preview.redd.it/jojo-family-tree-ethnicity-v0-qjjk97fyixtc1.png?auto=webp&s=d88131fab174fb1aa1ea8ad402da667d0c72fafe" alt="">
+       <img id="img_aspect" src="images/arbre-généalogique-Joestar.webp" alt="">
     </Article>
     <br>
 
