--- a/Code/histoire.html
+++ b/Code/histoire.html
@@ -35,7 +35,7 @@
 
         <span>
             <a href="Part2.html">
-            <img id="part2_histoire" src="https://i.ytimg.com/vi/--mu0CvFqPk/maxresdefault.jpg" alt="2e partie"></a>
+            <img id="part2_histoire" src="images/battle-tendency-logo.jpg" alt="2e partie"></a>
         </span>
 
         <span>
@@ -45,27 +45,27 @@
 
         <span>
             <a href="Part4.html">
-            <img id="part4_histoire" src="https://i.redd.it/092voru19j851.png" alt="4e partie"></a>
+            <img id="part4_histoire" src="images/diamond-is-unbreakable-logo.png" alt="4e partie"></a>
         </span>
 
         <span>
             <a href="Part5.html">
-            <img id="part5_histoire" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXGT8DrcxvYdctWUWSHMDSTqNEEnRJzu3VgQ&s" alt="5e partie"></a>
+            <img id="part5_histoire" src="images/golden-wind-logo.png" alt="5e partie"></a>
         </span>
 
         <span>
             <a href="Part6.html">
-            <img id="part6_histoire" src="https://i.redd.it/kq8diz02vtk21.png" alt="6e partie"></a>
+            <img id="part6_histoire" src="images/stone-ocean-logo.png" alt="6e partie"></a>
         </span>
 
         <span>
             <a href="Part7.html">
-            <img id="part7_histoire" src="https://i.redd.it/kx4ttqnnb4951.png" alt="7e partie"></a>
+            <img id="part7_histoire" src="images/steel-ball-run-logo.png" alt="7e partie"></a>
         </span>
 
         <span>
             <a href="arbre-genealogique.html">
-                arbre
+                <img id="arbre_genealogique_logo" src="images/arbre-genealogique-logo.png" alt="arbre généalogique des Joestars">
             </a>
         </span>
     </Article>
