--- a/Code/part2.html
+++ b/Code/part2.html
@@ -3,7 +3,10 @@
 
 <head>
 
+    <title>Battle Tendency</title>
+
     <link rel="stylesheet" href="style_projet.css">
+
     <link rel="icon" type="image/png" href="https://static.jojowiki.com/images/thumb/3/33/latest/20221003055733/RedStoneAja.png/800px-RedStoneAja.png">
 
 </head>
@@ -13,7 +16,7 @@
     <nav>
         <span>
             <a href="Index.html">
-                <img class="boutton_acceui" src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
+                <img class="boutton_acceui" src="images/bizarre-logo.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_2">
@@ -31,8 +34,8 @@
 
     <h1 id="texte_part"> Partie 2 - Battle Tendency</h1>
 
-    <div id="img_part_cover">
-        <img id="img_aspect" src="https://wallpapercave.com/wp/wp7348531.jpg" alt="">
+    <div id="img_part">
+        <img id="img_aspect" src="images/battle-tendency-cover.jpg" alt="">
     </div>
 
 
@@ -46,7 +49,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://www.jojodnd.com/artifacts/Assets/Red_Stone_of_Aja.webp" alt="">
+        <img id="img_aspect" src="images/battle tendency-Pierre_Aja.webp" alt="">
     </div>
 
     <h2 id="texte_part">
@@ -59,7 +62,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/2/20/latest/20201202184233/JosephEOH.png/400px-JosephEOH.png" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Joseph_Joestar.png" alt="">
     </div>
 
     <p id="texte_part">
@@ -67,7 +70,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://i.pinimg.com/originals/e6/1c/54/e61c541a6e262c678ec0bb5a1cf74c90.gif" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Nigerundayo.gif" alt="">
     </div>
 
     <h2 id="texte_part">
@@ -81,16 +84,16 @@
 
 
     <div id="img_part">
-        <img id="img_aspect" src="https://images.castingcall.club/role_images/esidisi-78747.png" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Esidisi.webp" alt="">
     </div>
 
     <p id="texte_part">
-        Wamuu est le 2e antagoniste qui fait partie des Hommes du Pillier. Il maîtrise le vent. il peut cracher du vent et faire tourner ses bras pour faire du vent.
+        Wamuu est le 2e antagoniste qui fait partie des Hommes du Pillier. Il maîtrise le vent. Il peut cracher du vent et faire tourner ses bras pour faire du vent.
         <br>Voici à quoi il ressemble :
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://pbs.twimg.com/media/Gt-4YT8XcAAty3S.jpg" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Wamuu.jpg" alt="">
     </div>
 
     <p id="texte_part">
@@ -98,12 +101,12 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://static.jojowiki.com/images/thumb/8/88/latest/20240224164606/Kars_Infobox_Manga.png/400px-Kars_Infobox_Manga.png" alt="">
-        <img id="img_aspect" src="https://i.makeagif.com/media/11-01-2024/evJRsO.gif" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Kars.png" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Kars_meme.gif" alt="">
     </div>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://m.media-amazon.com/images/M/MV5BZjk1MjBkNzgtMzY5OC00NzE0LTg4MGMtODkwMDM3OWU1ODRmXkEyXkFqcGc@._V1_.jpg" alt="">
+        <img id="img_aspect" src="images/battle-tendency-Kars_sun.jpg" alt="">
     </div>
 
     <h2 id="texte_part">
@@ -115,7 +118,7 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://static.jojowiki.com/images/5/5c/latest/20240713072921/Lisalisa_jojoeoh.png" alt="">
+        <img id="img_aspect" src="images/battle-tendency-lisa_lisa.png" alt="">
     </div>
 
     <p id="texte_part">
@@ -123,12 +126,12 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://i.ytimg.com/vi/Kz2JJtM5oog/hqdefault.jpg" alt="">
+        <img id="img_aspect" src="images/battle-tendency-caesar.jpg" alt="">
     </div>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://i.redd.it/sqjpfx7vf59d1.gif" alt="">
-        <img id="img_aspect" src="https://i.redd.it/h9nduaetzjdg1.gif" alt="">
+        <img id="img_aspect" src="images/battle-tendency-caesar_mort.gif" alt="">
+        <img id="img_aspect" src="images/battle-tendency-CEEEEEZZZAAA.gif" alt="">
     </div>
 
     <p id="texte_part">
@@ -137,13 +140,13 @@
     </p>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://preview.redd.it/if-stroheim-jojo-was-in-wolfenstein-how-would-his-boss-v0-nkz9a35vrt2e1.jpg?width=500&format=pjpg&auto=webp&s=4d6408929b8d36b18036cb82b13045ead2209fe4" alt="">
+        <img id="img_aspect" src="images/battle-tendency-stroheim.webp" alt="">
     </div>
 
     <br>
 
     <div id="img_part">
-        <img id="img_aspect" src="https://i.redd.it/ls18jk96dht51.jpg" alt="">
+        <img id="img_aspect" src="images/battle-tendency-salut_nazi.jpg" alt="">
     </div>
 
     <br><br>
