--- a/Code/auteur.html
+++ b/Code/auteur.html
@@ -14,7 +14,7 @@
     <nav>
         <span id="boutton_acceui">
             <a href="Index.html">
-                <img src="https://freepngimg.com/download/anime/118707-jojo-bizarre-jojo-s-adventure-free-download-png-hq.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
+                <img src="images/bizarre-logo.png" style="width: 40px; height: auto;" alt="boutton pour aller a l'acceuil"></a>
         </span>
 
         <span id="button_1">
@@ -31,7 +31,7 @@
      
 
     <div id="Araki_photo">
-        <img id="photo" src="https://www.shoshosein.com/sites/default/files/auteur/araki-hirohiko.jpg" alt="">
+        <img id="photo" src="images/araki-hirohiko.jpg" alt="">
     </div>
 
     <br><br><br>
